--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The epub reader extension from Future Press",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^7.0.0",
-    "webpack": "^5.18.0"
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0"
   }
 }
